--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:tvGq7TMDfOE43Pt2WXHSQU3Vrm/Q9qsOi/fVyqp8x+U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/dashboard/e_commerce_api/public
+
+# Sanctum stateful domains 
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,127.0.0.1:8000,localhost:3000,localhost:3001
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +23,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=e_commerce_api
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=ecommerce_system_api
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
